2024/extreme/Angelic/code/custom_default_backend.yml
apiVersion: v1
kind: Service
metadata:
  name: custom-default-backend
  labels:
    app.kubernetes.io/name: custom-default-backend
spec:
  selector:
    app.kubernetes.io/name: custom-default-backend
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-default-backend
  labels:
    app.kubernetes.io/name: custom-default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: custom-default-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: custom-default-backend
    spec:
      containers:
      - name: custom-default-backend
        image: custom-default-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
