2024/extreme/Angelic/code/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fallen
spec:
  selector:
    app: fallen
  ports:
    - port: 3000
      targetPort: 3000
